--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
+    "gh-pages": "^6.2.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "push-dir": "^0.4.1",
