--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Vitalya.Efimov <Vitalay.efimov@gmail.com>",
   "private": true,
   "scripts": {
+    "predeploy": "quasar build",
+    "deploy": "gh-pages -d dist/spa",
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
     "test": "echo \"No test specified\" && exit 0",
@@ -24,7 +26,6 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
-    "gh-pages": "^6.2.0",
     "postcss": "^8.4.14",
     "prettier": "^2.5.1",
     "push-dir": "^0.4.1",
